logs/paramtk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/numbergen'...
Listing './lib/python3.5/site-packages/param'...
Listing './lib/python3.5/site-packages/param-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/paramtk'...
Compiling './lib/python3.5/site-packages/paramtk/__init__.py'...
***   File "./lib/python3.5/site-packages/paramtk/__init__.py", line 232
    print "param.tk already initialized; ignoring call to param.tk.initialize()"
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paramtk/odict.py'...
***   File "./lib/python3.5/site-packages/paramtk/odict.py", line 616
    raise TypeError, ('pop expected at most 2 arguments, got %s' %
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paramtk/tcl'...
Listing './lib/python3.5/site-packages/paramtk/tcl/scrodget-2.1'...
Listing './lib/python3.5/site-packages/paramtk/tcl/snit-2.2.1'...
Listing './lib/python3.5/site-packages/paramtk/tcl/tooltip-1.4'...
Compiling './lib/python3.5/site-packages/paramtk/tilewrapper.py'...
***   File "./lib/python3.5/site-packages/paramtk/tilewrapper.py", line 466
    print "GUI: tcl/tk version is older than 8.5; using simple back-up widgets."
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/paramtk-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/pillowfight-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
